bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/weld_same_parent_child.error_regex
Weld must specify different name for parent and child, while \[simple_model::base\] was specified for both.
